--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,8 +12,32 @@
         android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.583"
+        app:layout_constraintVertical_bias="0.683"
         tools:layout_editor_absoluteX="0dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email-ID"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.583"
+        android:textColor="@color/stackBackground"
+        android:id="@+id/email_edit_text"
+        android:inputType="textEmailAddress"
+        android:layout_margin="8dp"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.483"
+        android:textColor="@color/stackBackground"
+        android:id="@+id/password_edit_text"
+        android:inputType="textPassword"
+        android:layout_margin="8dp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -23,8 +47,9 @@
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.455"
+        app:layout_constraintVertical_bias="0.355"
         android:backgroundTint="@color/stackBackground"
         android:textColor="@android:color/white"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false"
+        android:id="@+id/login_button"/>
 </android.support.constraint.ConstraintLayout>
